--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -40,7 +40,9 @@
 
     <!-- Sticky button -->
     <button class="sticky-btn">
-      Ready to get your <strong>quote</strong>?
+      <a href="../SecondPage/secondPage.html">
+        Ready to get your <strong>quote</strong>?
+      </a>
     </button>
     <!-- Here starts MAIN - Section 1 -->
     <div class="section1">
