some font tests

--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -29,11 +29,9 @@
   <body>
     <!-- Here starts HEADER -->
     <header>
-      <section id="main">
-        <div id="overlay">
-          <h1>Femina Link</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
+      <section class="header-whole">
+        <h1>Femina Link</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </section>
     </header>
     <!-- Here ends HEADER -->
@@ -57,8 +55,8 @@
       >
         <p class="item-first-p">01</p>
         <div class="item-title">
-          ENGAGE YOUR <br />
-          AUDIENCE
+          Engage your <br />
+          audience
         </div>
         <hr />
         <p class="item-second-p">
@@ -82,7 +80,7 @@
         tabindex="0"
       >
         <p class="item-first-p">02</p>
-        <div class="item-title">STAY AHEAD OF <br />COMPETITORS</div>
+        <div class="item-title">Stay ahead of <br />competitors</div>
         <hr />
         <p class="item-second-p">
           We ensure your website will outrank the competition and work harder to
@@ -105,7 +103,7 @@
         tabindex="0"
       >
         <p class="item-first-p">03</p>
-        <div class="item-title">INCREASE YOUR <br />SALES</div>
+        <div class="item-title">Increase your <br />sales</div>
         <hr />
         <p class="item-second-p">
           Strategic design and a great user experience will convert visitors
