--- a/SecondPage/secondPage.html
+++ b/SecondPage/secondPage.html
@@ -18,6 +18,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <title>Femina Link Second Page</title>
   </head>
   <body>
@@ -56,8 +64,8 @@
         <input class="main-input2" type="text" />
 
         <div class="main-btn">
-          <button onclick="thankYou()">SEND INQUIRY</button>
-          <button onclick="info()">SCHEDULE A CALL</button>
+          <button onclick="thankYou()">Send enquiry</button>
+          <button onclick="info()">Schedule a call</button>
         </div>
       </div>
     </main>
