--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -368,5 +368,17 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Here starts Let's talk about your website project -->
+    <section class="inquiry">
+      <h1>Let's talk about <br />your website project!</h1>
+      <h2>
+        Do you have an exciting strategic project coming up <br />
+        that you would like to talk about?
+      </h2>
+      <a href="" class="hero-btn inquiry-btn">SEND INQUIRY</a>
+      <a href="" class="hero-btn call-btn">SCHEDULE A CALL</a>
+    </section>
+    <!-- Here ends Let's talk about your website project -->
   </body>
 </html>
