footer design css and html

--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -380,5 +380,41 @@
       <a href="" class="hero-btn call-btn">SCHEDULE A CALL</a>
     </section>
     <!-- Here ends Let's talk about your website project -->
+
+    <!-- Here starts FOOTER -->
+    <footer class="footer-container">
+      <section class="footer">
+        <div class="footer-heading footer-1">
+          <h2>SITE MAP</h2>
+          <a href="#">SERVICES</a>
+          <a href="#">PORTFOLIO</a>
+          <a href="#">MEET US</a>
+          <a href="#">CONTACT</a>
+        </div>
+        <div class="footer-heading footer-2">
+          <h2>SERVICES</h2>
+          <a href="#">WEB DESIGN</a>
+          <a href="#">WEB DEVELOPMENT</a>
+          <a href="#">BRANDING</a>
+        </div>
+
+        <div class="footer-email-form">
+          <h2>JOIN OUR NEWSLETTER</h2>
+          <input
+            type="email"
+            placeholder="Enter your email address"
+            id="footer-email"
+          />
+          <input type="submit" value="Sign Up" id="footer-email-btn" />
+          <div class="icons">
+            <i class="fa fa-facebook" href="#"></i>
+            <i class="fa fa-twitter" href="#"></i>
+            <i class="fa fa-instagram" href="#"></i>
+            <i class="fa fa-linkedin" href="#"></i>
+          </div>
+        </div>
+      </section>
+    </footer>
+    <!-- Here ends FOOTER -->
   </body>
 </html>
