Adding your changes
- I added the header + footer for the second page,
- I updated the homepage with your code,
- I enlarged the cards and text

--- a/SecondPage/secondPage.html
+++ b/SecondPage/secondPage.html
@@ -18,11 +18,26 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <title>Femina Link Second Page</title>
   </head>
   <body>
     <!-- Here starts HEADER -->
-    <header></header>
+    <header>
+      <section id="main">
+        <div id="overlay">
+          <h1>Femina Link</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </section>
+    </header>
     <!-- Here ends HEADER -->
 
     <!-- Here starts MAIN -->
@@ -65,7 +80,39 @@
     <!-- Here ends MAIN -->
 
     <!-- Here starts FOOTER -->
-    <footer></footer>
+    <footer class="footer-container">
+      <section class="footer">
+        <div class="footer-heading footer-1">
+          <h2>SITE MAP</h2>
+          <a href="#">SERVICES</a>
+          <a href="#">PORTFOLIO</a>
+          <a href="#">MEET US</a>
+          <a href="#">CONTACT</a>
+        </div>
+        <div class="footer-heading footer-2">
+          <h2>SERVICES</h2>
+          <a href="#">WEB DESIGN</a>
+          <a href="#">WEB DEVELOPMENT</a>
+          <a href="#">BRANDING</a>
+        </div>
+
+        <div class="footer-email-form">
+          <h2>JOIN OUR NEWSLETTER</h2>
+          <input
+            type="email"
+            placeholder="Enter your email address"
+            id="footer-email"
+          />
+          <input type="submit" value="Sign Up" id="footer-email-btn" />
+          <div class="icons">
+            <i class="fa fa-facebook" href="#"></i>
+            <i class="fa fa-twitter" href="#"></i>
+            <i class="fa fa-instagram" href="#"></i>
+            <i class="fa fa-linkedin" href="#"></i>
+          </div>
+        </div>
+      </section>
+    </footer>
     <!-- Here ends FOOTER -->
 
     <!-- Scripts -->
