--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -30,6 +30,15 @@
     <!-- Here starts HEADER -->
     <header>
       <section class="header-whole">
+        <nav class="navbar">
+          <ul class="navbarlist">
+            <li><a href="#home">home </a></li>
+            <li><a href="#services">services</a></li>
+            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="#meetus">meet us</a></li>
+            <li><a href="#contact">contact</a></li>
+          </ul>
+        </nav>
         <h1>Femina Link</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </section>
@@ -118,237 +127,53 @@
       </div>
     </div>
 
-    <!-- Bla bla -->
-    <h2>Sticky Element: Scroll Down to See the Effect</h2>
-    <p>Scroll down this page to see how sticky positioning works.</p>
-    <div class="sticky">
-      I will stick to the screen when you reach my scroll position
-    </div>
+    <!-- Here starts Let's talk about your website project -->
+    <section class="inquiry">
+      <h1>Let's talk about <br />your website project!</h1>
+      <h2>
+        Do you have an exciting strategic project coming up <br />
+        that you would like to talk about?
+      </h2>
+      <a href="" class="hero-btn inquiry-btn">SEND INQUIRY</a>
+      <a href="" class="hero-btn call-btn">SCHEDULE A CALL</a>
+    </section>
+    <!-- Here ends Let's talk about your website project -->
 
-    <p>Some example text..</p>
-    <h2>Scroll back up again to "remove" the sticky position.</h2>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-      velit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-      imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-      scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-      congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-      Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-      convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-      dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-      venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus
-      pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-    </p>
+    <!-- Here starts FOOTER -->
+    <footer class="footer-container">
+      <section class="footer">
+        <div class="footer-heading footer-1">
+          <h2>SITE MAP</h2>
+          <a href="#">SERVICES</a>
+          <a href="#">PORTFOLIO</a>
+          <a href="#">MEET US</a>
+          <a href="#">CONTACT</a>
+        </div>
+        <div class="footer-heading footer-2">
+          <h2>SERVICES</h2>
+          <a href="#">WEB DESIGN</a>
+          <a href="#">WEB DEVELOPMENT</a>
+          <a href="#">BRANDING</a>
+        </div>
+
+        <div class="footer-email-form">
+          <h2>JOIN OUR NEWSLETTER</h2>
+          <input
+            type="email"
+            placeholder="Enter your email address"
+            id="footer-email"
+          />
+          <input type="submit" value="Sign Up" id="footer-email-btn" />
+          <div class="icons">
+            <i class="fa fa-facebook" href="#"></i>
+            <i class="fa fa-twitter" href="#"></i>
+            <i class="fa fa-instagram" href="#"></i>
+            <i class="fa fa-linkedin" href="#"></i>
+          </div>
+        </div>
+      </section>
+    </footer>
+    <!-- Here ends FOOTER -->
 
     <!-- Bootstrap script -->
     <script
