Resolving conflicts and adding last changes

--- a/SecondPage/secondPage.html
+++ b/SecondPage/secondPage.html
@@ -41,16 +41,23 @@
   </head>
   <body>
 
-    <!-- Here starts HEADER -->
-    <header>
-      <section id="main">
-        <div id="overlay">
-          <h1>Femina Link</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-      </section>
-    </header>
-    <!-- Here ends HEADER -->
+<!-- Here starts HEADER -->
+<header>
+  <section class="header-whole">
+    <nav class="navbar">
+      <ul class="navbarlist">
+        <li><a href="../HomePage/index.html">home </a></li>
+        <li><a href="#services">services</a></li>
+        <li><a href="#portfolio">portfolio</a></li>
+        <li><a href="#meetus">meet us</a></li>
+        <li><a href="../SecondPage/secondPage.html">contact</a></li>
+      </ul>
+    </nav>
+    <h1>Femina Link</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  </section>
+</header>
+<!-- Here ends HEADER -->
 
     <!-- Here starts MAIN -->
     <!-- Sticky button -->
@@ -76,7 +83,21 @@
           excepturi beatae, perspiciatis ullam exercitationem deserunt.<br> Voluptas
           saepe vel beatae illum doloribus.
         </p>
-
+      </div>
+      <!-- Second column -->
+      <div class="col main-item-2">
+        <h1 class="col2-h1">GET IN TOUCH</h1>
+        <div class="div-input">
+          <input class="col-input" type="text" placeholder="Your name ..." />
+          <i class="fa-solid fa-user"></i>
+        </div>
+        <div class="div-input">
+          <input  class="col-input" type="text" placeholder="Your email ..." />
+          <i class="fa-solid fa-envelope"></i>
+        </div>
+        <div class="div-input">
+          <input  class="col-input" type="text" placeholder="Your message ..." />
+          <i class="fa-solid fa-comment"></i>
         </div>
       </div>
     </div>
