--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/5da646489a.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./style.css" />
     <link
@@ -32,11 +36,11 @@
       <section class="header-whole">
         <nav class="navbar">
           <ul class="navbarlist">
-            <li><a href="#home">home </a></li>
+            <li><a href="../HomePage/index.html">home </a></li>
             <li><a href="#services">services</a></li>
             <li><a href="#portfolio">portfolio</a></li>
             <li><a href="#meetus">meet us</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="../SecondPage/secondPage.html">contact</a></li>
           </ul>
         </nav>
         <h1>Femina Link</h1>
@@ -138,6 +142,23 @@
       <a href="" class="hero-btn call-btn">SCHEDULE A CALL</a>
     </section>
     <!-- Here ends Let's talk about your website project -->
+
+    <!-- Here starts FOOTER -->
+    <footer class="footer-container">
+      <section class="footer">
+        <div class="footer-heading footer-1">
+          <h2>SITE MAP</h2>
+          <a href="#">SERVICES</a>
+          <a href="#">PORTFOLIO</a>
+          <a href="#">MEET US</a>
+          <a href="#">CONTACT</a>
+        </div>
+        <div class="footer-heading footer-2">
+          <h2>SERVICES</h2>
+          <a href="#">WEB DESIGN</a>
+          <a href="#">WEB DEVELOPMENT</a>
+          <a href="#">BRANDING</a>
+        </div>
 
         <div class="footer-email-form">
           <h2>JOIN OUR NEWSLETTER</h2>
