--- a/SecondPage/secondPage.html
+++ b/SecondPage/secondPage.html
@@ -96,7 +96,7 @@
           <i class="fa-solid fa-envelope"></i>
         </div>
         <div class="div-input">
-          <input  class="col-input" type="text" placeholder="Your message ..." />
+          <input  class="col-input textarea" placeholder="Your message ..." />
           <i class="fa-solid fa-comment"></i>
         </div>
       </div>
