amended header inc making bigger

--- a/SecondPage/secondPage.html
+++ b/SecondPage/secondPage.html
@@ -53,8 +53,8 @@
         <li><a href="../SecondPage/secondPage.html">contact</a></li>
       </ul>
     </nav>
-    <h1>Femina Link</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <h1 class="header-wording"><a href="./index.html"></a> Femina Link</h1>
+    <p>Award-winning digital creativity</p>
   </section>
 </header>
 <!-- Here ends HEADER -->
