linked Femina Link navbar to home page

--- a/MeetUsPage/meetus.html
+++ b/MeetUsPage/meetus.html
@@ -41,7 +41,7 @@
       <!-- <h1 class="header-h">Femina &ltLink&gt</h1> -->
       <nav>
         <h1 class="header-wording">
-          <a href="../HomePage/index.html"></a> Femina &ltLink&gt
+          <a href="../HomePage/index.html">Femina &ltLink&gt</a>
         </h1>
         <div class="nav-links" id="navLinks">
           <!-- <i class="fa fa-times" onclick="hideMenu()"></i> -->
